styles/main.css
section.login {
  background: url(../images/girl_img.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 100%;
  position: absolute;
  width: 100%;
  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #d9d628;
}

section.fotd, section.showall {
  background: url(../images/triangles2001.jpg) center center fixed;
  background-repeat: repeat-y;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  min-height: 1500px;
  width: 100%;
  position: absolute;
}

.grey-background {
  background-color: #3E3A40;
  text-align: center;
  padding: 50px 0 50px 0;
  margin: 40px auto 0;
  max-width: 1000px;
}

.webcamContainer, .imageContainer {
  margin-top:20px;
  position:relative;
}
.webcamContainer::after {
  content: "";
  background: url("../images/OR.png");
  width: 75px;
  height: 44px;
  position: absolute;
  right: -34px;
  top: 100px;
  font-size: 36px;
}

.webcamContainer video {
  width:320px;
  height:240px;
  background: #535055;
}

.webcamContainer canvas {
  position: relative;
  top: -16px;
  margin-top: -240px;
}

nav {
  background-color: #29252B;
  color: #d9d628;
  height: 78px;
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 9999;
}

.logo {
  max-width: 100px;
  margin: 10px;
  margin-right: 20px;
}

label {
  color: #F9F5E8;
  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 300;
  text-align: left;
}

.loginform {
  background-color: #3b032f;
  margin-top: 75px;
  padding: 20px;
  border-radius: 5px;

}
.tagline {
  color: #F9F5E8;
  height: 45px;
  /*margin: 30px 0 0 25px;*/

}
.button {
  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding: 8px;
  background-color:#48414c;
  color: #FFF;
}

nav .button {
  color: #D9D64A;
  padding: 10px;
  display: inline-block;
  border-radius: 3px;
  margin-top: 20px;
  margin-right: 8px;
}

.f-dropdown li a {
  text-align: left;
}
.nav-buttons {
  text-align: right;
}

.upload-img-preview {
  max-width: 320px;
}

.imageUpload {
  color:#fff;
  background: #9E1380;
  position: relative;
  overflow: hidden;
  margin:18px 10px;
  display: inline-block;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  white-space: nowrap;
  padding: 10px 25px;
  font-size: 14px;
  line-height: 1.42857143;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  transition: all 300ms ease-in-out;
  -webkit-transition: all 300ms ease-in-out;
}

.imageUpload:hover {
  background: #A72A8C;
}

.imageUpload span{
  text-transform: uppercase;
}

.imageUpload input.upload {
  position: absolute;
  top: 0;
  right: 0;
  margin: 0;
  padding: 0;
  font-size: 13px;
  cursor: pointer;
  opacity: 0;
  filter: alpha(opacity=0);
}

.pickFile, .takePic, .edit, input.addMakeup {
  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #fff;
  border-radius: 3px;
  background-color: #9E1380;
  font-size: 13px;
  text-transform: uppercase;
  height: 40px;
  padding: 10px 25px;
  text-align: center;
}

.edit a {
  color: #FFF;
}


input.addMakeup {
  background: #D9D64A;
  color: #29252b;
  height: auto;
  padding: 13px 50px;
  font-size: 16px;
}


input.addMakeup:hover, .takePic:hover, .pickFile:hover, .edit:hover {
background-color: #A72A8C;
color:#fff;
}

input[type="file"]{
}


.thumbnail {
  margin: 0 auto;
  max-width:650px;
}

.makeupForm.row {
  display: table;
  width: 100%;
  max-width: 62.5em;
}

.large-12 input{
  margin-bottom: 100x;
}

/* hover color on button lighter fuschia #A72A8C*/

@import url(http://weloveiconfonts.com/api/?family=fontawesome);
@import url(http://meyerweb.com/eric/tools/css/reset/reset.css);
/* ---------- FONTAWESOME ---------- */



/* ---------- GENERAL ---------- */
* {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
*:before, *:after {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  color: #606468;
  font: 1em/1em "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;;
  margin: 0;
  /*background: #3E3A40;*/
}

input {
  border: none;
  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 14px;
  line-height: 1.5em;
  padding: 0;
  -webkit-appearance: none;
}

p {
  line-height: 1.5em;
}

.clearfix {
  *zoom: 1;
}
/*.clearfix:before, .clearfix:after {
  content: ' ';

}*/
.clearfix:after {
  clear: both;
}

.container {
  left: 50%;
  position: fixed;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

/* ---------- LOGIN ---------- */

#login form img {
  margin: 20px 0 10px 25px;
  width: 350px;
}
#login {
  margin-top: 95px;
}

#login form span {
  background-color: #3E3A40;
  border-radius: 3px 0px 0px 3px;
  color: #BFC1C2;
  display: block;
  float: left;
  height: 50px;
  line-height: 50px;
  text-align: center;
  width: 50px;
}

#login form input {
  height: 50px;
}

#login form input[type="text"], #login form input[type="password"] {
  background-color: #4A484C;
  border-radius: 0px 3px 3px 0px;
  color: #F9F5E8;
  margin-bottom: 1em;
  padding: 0 16px;
  width: 230px;
  border-color: #4D4B4D;
}

#login form input[type="submit"], #login form div.register-button {
  border-radius: 3px;
  font-size: 15px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  background-color: #9E1380;
  color: black;
  font-weight: bold;
  margin-bottom: 1em;
  text-transform: uppercase;
  width: 280px;
  transition: all 300ms ease-in-out;
  -webkit-transition: all 300ms ease-in-out;
}

#login form div.register-button {
  height: 50px;
  text-align: center;
  padding-top: 15px;
  transition: all 300ms ease-in-out;
  -webkit-transition: all 300ms ease-in-out;
  cursor: pointer;
}

.forgot-pw {
  float: right;
  color: #D9D64A;
  padding: 0 0 10px;
  transition: all 300ms ease-in-out;
  -webkit-transition: all 300ms ease-in-out;
}
.forgot-pw:hover {
  color: #A72A8C;
  cursor: pointer;

}

#login form input[type="submit"]:hover {
  background-color: #e748c5;
}

#login form div.register-button:hover {
  background-color: #e748c5;
}

#login > p {
  text-align: center;
}

#login > p span {
  padding-left: 5px;
}

fieldset, .fotd fieldset .panel {
  border: none;
  margin: 20px;
  background-color: #29252B;

}
.fotd fieldset {
  background: none;
  padding: 0;
  margin: 0;
}

/* ShowAll Image Grid */
.faces {
  display:inline-block;
  position: relative;
  width: 200px;
  height: 200px;
  overflow: hidden;
  margin: 20px 20px 10px 20px;
}

.faces:hover {
  -webkit-box-shadow: 3px 4px 60px 4px rgba(158,19,128,0.3);
  -moz-box-shadow: 3px 4px 60px 4px rgba(158,19,128,0.3);
  box-shadow: 3px 4px 60px 4px rgba(158,19,128,0.3);
}
.faces img {
  position: absolute;
  left: 50%;
  top: 50%;
  height: auto;
  width: 100%;
  -webkit-transform: translate(-50%,-50%) scale(1.5);
  -ms-transform: translate(-50%,-50%) scale(1.5);
  transform: translate(-50%,-50%) scale(1.5);
}
.facedates{
  display:inline-block;
  position: relative;
}

.date {
  display:inline-block;
  position: relative;
}
/* show page */
ul li {
  color: #fff;
  list-style: none;
  text-align: left;

}

.show-img {
  margin: 25px 20px 0px 20px;
  max-width: 400px;
}

a.edit {
  clear: both;
  margin: 15px;
}

.show-date {
  margin: 20px;
  display: block;
  clear: both;
}

h5 {
  display: inline-block;
  padding-right: 8px;
}

[class*="column"] + [class*="column"]:last-child {
   float: left;
 }

.makeup-list {
  margin-left: 40px;
  background-color: #48414C;
  width: 28%;
}

.list-row {


}



@media (max-width: 700px) {
  .tagline {
    display: none;
  }
}

